Text Object: drag selection does not respect scale change by text box's scaled to fit mode #107499

Closed
opened 2023-05-01 16:35:34 +02:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-30 05:23, hash: 358ce4f52b58
Worked: n/a

Text selection was introduced with 68f8253c71

Short description of error
Text selection does not respect scale change by text box's Scaled to Fit mode. It still works on the original scale.

Exact steps for others to reproduce the error

  • Add an text object
  • Set text box overflow mode to Scaled to Fit
  • Set size values to scale down the text
  • In edit mode, try to drag select the text
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-30 05:23, hash: `358ce4f52b58` Worked: n/a Text selection was introduced with 68f8253c71 **Short description of error** Text selection does not respect scale change by text box's Scaled to Fit mode. It still works on the original scale. **Exact steps for others to reproduce the error** <video src="/attachments/d7d828b4-9f05-4644-8743-38034233bb68" controls></video> - Add an text object - Set text box overflow mode to Scaled to Fit - Set size values to scale down the text - In edit mode, try to drag select the text
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-01 16:35:35 +02:00
Iliya Katushenock added
Module
User Interface
Status
Confirmed
Interest
Modeling
and removed
Status
Needs Triage
labels 2023-05-01 16:42:44 +02:00
@Harley
Harley Acheson self-assigned this 2023-05-01 16:54:01 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-02 19:32:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107499
No description provided.