source/blender/editors/curve/editfont.c
@@ -1812,8 +1812,6 @@ void FONT_OT_text_insert(wmOperatorType *ot)
 
 static int font_cursor_text_index_from_event(bContext *C, Object *obedit, const wmEvent *event)
 {
-  Curve *cu = obedit->data;
-
   /* Calculate a plane from the text object's orientation. */
   float plane[4];
   plane_from_point_normal_v3(plane, obedit->object_to_world[3], obedit->object_to_world[2]);
@@ -1826,7 +1824,7 @@ static int font_cursor_text_index_from_event(bContext *C, Object *obedit, const 
   /* Convert to object space and scale by font size. */
   mul_m4_v3(obedit->world_to_object, mouse_loc);
 
-  float curs_loc[2] = {mouse_loc[0] / cu->fsize, mouse_loc[1] / cu->fsize};
+  float curs_loc[2] = {mouse_loc[0], mouse_loc[1]};
   return BKE_vfont_cursor_to_text_index(obedit, curs_loc);
 }
 
